# UTCTF-25

./: README.md
crypto-autokey/: README.md  challenge.yml
crypto-ecb/: README.md  challenge.yml  docker-compose.yml
crypto-lazy-rsa-dcd/: README.md  challenge.yml
crypto-rsa-small-e/: README.md  challenge.yml
forensics-forgotten-footprints/: .gitattributes  README.md  challenge.yml  disk.img  gen.py
forensics-streamified-qr-bitstring/: README.md  challenge.yml  gen.py  sol.py
forensics-unstringsable/: README.md  challenge.yml  gen.py
misc-rabbit/: README.md  challenge.yml
misc-trapped1/: Dockerfile  README.md  challenge.yml  docker-compose.yaml
misc-trapped2/: Dockerfile  README.md  challenge.yml  docker-compose.yaml  start.sh
osint-words-1/: README.md  challenge.yml
osint-words-2/: README.md  challenge.yml
osint-words-3/: README.md  challenge.yml
pwn-ecorp2/: challenge.yml  docker-compose.yml  exploit.js  server.py
pwn-retirement/: Dockerfile  Makefile  README.md  challenge.yml  copy_binary_and_libc.sh  docker-compose.yaml  main.c  start.sh
pwn-retro-cookie-clicker/: challenge.yml  writeup.md
pwn-secbof/: .gdb_history  Makefile  README.md  chal.c  challenge.yml  docker-compose.yml
pwn-tictactoe/: README.md  challenge.yml  docker-compose.yml  root
rev-maps/: .gdb_history  README.md  chal.cpp  challenge.yml  gen.py  output.txt  writeup.md
web-chat/server/: Cargo.toml
web-chat/server/assets/: async-ws.js  htm.js  main.css  run.js
web-chat/server/src/: css_filter.rs  lib.rs  main.rs  utils.rs
web-chat/server/templates/: main.stpl
(+35 files in other folders)
